# lightctl

./: .gitignore  AGENTS.md  README.md  SKILL.md  justfile  lightctl.py  pyproject.toml  requirements.txt
config/: lights.example.json
lightctl/: __init__.py  cli.py  lights.py
runbooks/: tuya-local-setup.md
