[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightctl"
version = "0.1.0"
description = "Terminal-first local light control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tinytuya",
]

[project.scripts]
lightctl = "lightctl.cli:main"

[tool.setuptools]
packages = ["lightctl"]
